# Hify

./: Cargo.toml  README.md  hify.code-workspace
_dev/: keysign.jks
hify-android/: build.gradle
hify-android/app/: build.gradle
hify-androidtv/: build.gradle  gradle.properties  settings.gradle
hify-client/: .eslintrc  .gitignore  .graphqlrc  .graphqlrc.json  .oxfmtrc.json  .oxlintrc.json  README.md  biome.json  bun.lockb  codegen.ts  codegen.yml  index.html  package.json  pnpm-lock.yaml  rome.json  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
hify-client/src/: App.svelte  App.tsx  App.vue  Layout.tsx  Layout.vue  androidApp.d.ts  apollo-client.ts  config.ts  constants.ts  injected.ts  input.ts  main.css  main.ts  main.tsx  rest-api.ts  routes.ts  store.ts  utils.ts
hify-server/: .gitignore  Cargo.toml  Rocket.toml
hify-server/_dev/: .gitignore
hify-server/src/: builder.rs  changes.rs  check.rs  cmd.rs  ffprobe.rs  index.rs  logger.rs  logging.rs  main.rs  manager.rs  resources.rs  runner.rs  save.rs  server.rs
hify-server/src/arts/: albums.rs  artists.rs  generate.rs  genres.rs  manager.rs  mod.rs  tools.rs
hify-server/src/graphql/: entrypoint.rs  mod.rs  mutations.rs  pagination.rs  queries.rs  queries_on_types.rs  queries_types.rs  routes.rs  state.rs  utils.rs
hify-server/src/graphql/queries/: global.rs  mod.rs  on_types.rs
hify-server/src/helpers/: async_batch.rs  logging.rs  mod.rs  save.rs  time.rs
hify-server/src/http/: cache.rs  graphql.rs  logging.rs  mod.rs  routes.rs  server.rs  state.rs
hify-server/src/http/opensubsonic/: convert.rs  types.rs  xml.rs
hify-server/src/http/opensubsonic/routes/: annotation.rs  bookmarks.rs  browsing.rs  lists.rs  media.rs  mod.rs  playlists.rs  searching.rs  system.rs
hify-server/src/index/: arts.rs  blurhash.rs  builder.rs  cache.rs  cmp.rs  content.rs  data.rs  exiftool.rs  ffprobe.rs  id_types.rs  mod.rs  search.rs  sorted_map.rs  tracks_finder.rs  value_ord_map.rs
hify-server/src/index/exiftool/: analyzer.rs  file.rs  mod.rs  tags.rs
hify-server/src/index/metadata/: adapter.rs  analyzer.rs  converter.rs  mod.rs  walker.rs
hify-server/src/indexer/: analyzer.rs  mod.rs  tags.rs  walker.rs
hify-server/src/resources/: manager.rs  mod.rs  variants.rs
hify-server/src/rocket/: http.rs  mod.rs
hify-server/src/server/: graphql.rs  http.rs  mod.rs  mutations.rs  queries.rs
hify-server/src/server/graphql/: entrypoint.rs  mod.rs  mutations.rs  queries.rs  routes.rs  state.rs  utils.rs
hify-server/src/server/opensubsonic/: convert.rs  mod.rs  types.rs  xml.rs
hify-server/src/server/opensubsonic/routes/: annotation.rs  bookmarks.rs  browsing.rs  lists.rs  media.rs  mod.rs  playlists.rs  searching.rs  system.rs
hify-server/src/server/routes/: files.rs  mixes.rs  mod.rs  mutations.rs  queries.rs  searches.rs
hify-server/src/server/utils/: dtos.rs  files.rs  logging.rs  mixes.rs  mod.rs  pagination.rs  response.rs  search.rs  sorting.rs
hify-server/src/userdata/: cache.rs  config.rs  data.rs  history.rs  mix.rs  mod.rs  playlist.rs  wrapper.rs
hify-server/src/utils/: base62.rs  hash.rs  logging.rs  mod.rs  paths.rs  progress.rs  rand.rs  runner.rs  save.rs  time.rs
src/: builder.rs  ffprobe.rs  index.rs  main.rs  server.rs
(+417 files in other folders)
