[package]
name = "hify-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", default-features = false, features = ["http1", "http2", "macros", "query", "json", "tokio"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
indexmap = { version = "2.13.0", features = ["serde"] }
jiff = "0.2.18"
log = { version = "0.4.29", features = ["std"] }
pomsky-macro = "0.12.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", default-features = false, features = ["flac", "mp3", "ogg", "vorbis", "aac", "isomp4"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-gzip", "cors", "fs"], default-features = false }
walkdir = "2.5.0"
webp = { version = "0.3.1", default-features = false }
