[package]
name = "hify-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", default-features = false, features = ["http1", "http2", "macros", "query", "json", "tokio"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
indexmap = { version = "2.14.0", features = ["serde"] }
jiff = "0.2.32"
log = { version = "0.4.33", features = ["std"] }
pomsky-macro = "0.12.0"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
symphonia = { version = "0.6.0", features = ["all"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["compression-gzip", "cors", "fs"], default-features = false }
walkdir = "2.5.0"
webp = { version = "0.3.1", default-features = false }
